<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#BBCD12">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aplikasi"
                android:textSize="36dp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"/>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bangun_ruang"
                android:textSize="28dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"/>
            
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#BBCD12">

            <TextView
                android:id="@+id/jari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jari"
                android:textSize="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/isiJari"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/panjang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/panjang"
                android:textSize="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/isiPanjang"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/lebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lebar"
                android:textSize="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/isiLebar"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/tinggi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tinggi"
                android:textSize="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/isiTinggi"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hitung"
                android:textSize="12dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/hasil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil"
                android:layout_gravity="center"
                android:textSize="32dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>